# CTFeed

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ctfeed.py  docker-compose.yml  main.py  pyproject.toml  ruff.toml  run.sh  setup_env.sh
.github/workflows/: ci.yml
src/: __init__.py  config.py  country_flags.py  ctf_api.py  data_manager.py  embed_creator.py
